--- a/src/login.html
+++ b/src/login.html
@@ -41,15 +41,18 @@
                                     <div class="text-center">
                                         <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
                                     </div>
-                                    <form class="user">
+                                    <form class="user" action="signin.php" method="post">
                                         <div class="form-group">
                                             <input type="email" class="form-control form-control-user"
                                                 id="exampleInputEmail" aria-describedby="emailHelp"
-                                                placeholder="Enter Email Address...">
+                                                placeholder="Enter Email Address... "
+                                                name="email" required>
+                                                
                                         </div>
                                         <div class="form-group">
                                             <input type="password" class="form-control form-control-user"
-                                                id="exampleInputPassword" placeholder="Password">
+                                                id="exampleInputPassword" placeholder="Password"
+                                                name="passwd" required>
                                         </div>
                                         <div class="form-group">
                                             <div class="custom-control custom-checkbox small">
@@ -58,6 +61,8 @@
                                                     Me</label>
                                             </div>
                                         </div>
+                                        <button class="btn btn-primary btn-user btn-block">Login</button>
+                                        <!--
                                         <a href="index.html" class="btn btn-primary btn-user btn-block">
                                             Login
                                         </a>
@@ -68,6 +73,7 @@
                                         <a href="index.html" class="btn btn-facebook btn-user btn-block">
                                             <i class="fab fa-facebook-f fa-fw"></i> Login with Facebook
                                         </a>
+                                        -->
                                     </form>
                                     <hr>
                                     <div class="text-center">
